Update ts sdk. Pass replicas parallelism related fields through to infra
