# libs/shared/src/presentation/http/v1/requests/deployment/mod.rs
@@ -1,4 +1,5 @@
 mod dto_to_shared_kernel;
+mod dto_to_entity;
 
 use platforms::Platform;
 use serde::{Deserialize, Serialize};
@@ -6,7 +7,7 @@ use serde_json::Value;
 use utoipa::{IntoParams, ToSchema};
 use uuid::Uuid;
 
-use crate::presentation::http::v1::requests::common::Scope;
+use crate::{presentation::http::v1::requests::common::Scope};
 
 #[derive(Debug, Deserialize, Clone, IntoParams, ToSchema)]
 pub struct DeployModelWithStrategyPathParams {
@@ -24,11 +25,23 @@ pub struct DeployModelWithStrategyBody {
     pub model_author: String,
     pub deployment_modality: DeploymentModality,
     pub params: Value,
+    pub replicas: Option<u8>,
+    pub parallelism_strategies: Option<Vec<ParallelismStrategy>>,
     #[serde(default = "default_scope")]
     #[param(value_type = Scope, inline, required)]
     /// Selector for global vs tenant-scoped models
     pub scope: Scope
 }
+
+#[derive(Clone, Debug, Deserialize, ToSchema, Serialize)]
+pub enum ParallelismStrategy {
+    PipelineParallelism,
+    TensorParallelism,
+    SequenceParallelism,
+    ContextParallelism,
+    ExpertParallelism,
+}
+
 
 #[derive(Clone, Debug, ToSchema, Deserialize)]
 pub enum DeploymentModality {
