# services/deployments/spec/v1/openapi.json
@@ -439,9 +439,13 @@
           "name",
           "model_name",
           "model_author",
+          "deployment_modality",
           "params"
         ],
         "properties": {
+          "deployment_modality": {
+            "$ref": "#/components/schemas/DeploymentModality"
+          },
           "description": {
             "type": [
               "string",
@@ -960,18 +964,22 @@
         "required": [
           "name",
           "platform",
-          "deployment_modality",
-          "parameters"
+          "parameters",
+          "config",
+          "enabled"
         ],
         "properties": {
-          "deployment_modality": {
-            "$ref": "#/components/schemas/DeploymentModality"
+          "config": {
+            "$ref": "#/components/schemas/StrategyConfig"
           },
           "description": {
             "type": [
               "string",
               "null"
             ]
+          },
+          "enabled": {
+            "type": "boolean"
           },
           "name": {
             "type": "string"
@@ -984,6 +992,49 @@
           },
           "platform": {
             "$ref": "#/components/schemas/Platform"
+          }
+        }
+      },
+      "StrategyConfig": {
+        "type": "object",
+        "required": [
+          "supported_paralellism_strategies",
+          "supported_deployment_modalities",
+          "min_replicas"
+        ],
+        "properties": {
+          "max_replicas": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "int64",
+            "minimum": 0
+          },
+          "max_ttl": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "int64",
+            "minimum": 0
+          },
+          "min_replicas": {
+            "type": "integer",
+            "format": "int64",
+            "minimum": 0
+          },
+          "supported_deployment_modalities": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/DeploymentModality"
+            }
+          },
+          "supported_paralellism_strategies": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ParallelismStrategy"
+            }
           }
         }
       },
